# teams-meeting-to-line-group-bot

./: .env.example  .funcignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_CLEANUP_REPORT.md  PROJECT_INFO.md  README.md  README_DEPLOYMENT.md  __init__.py  app_unified.py  check_env.py  debug_target_id.py  function_app.py  host.json  local.settings.json  local.settings.json.example  pyproject.toml  reply_token_manager.py  requirements.txt  send_flex_local.py  setup.py  setup_project.py  teams_webhook.py  test_cleaned_target_id.py  test_flex.py  test_unified_app.py  test_webhook.py  translation_bot.py  webhook_logger.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-cd.yml  main_yzuimsc-linebot.yml
HttpTrigger/: function.json
docs/: LINE_TEST_MODE_GUIDE.md  QUICK_START.md  README.md  SIGNATURE_SKIP_GUIDE.md  TESTING_GUIDE.md  TEST_SETUP.md  real_line_webhook_example.json
scripts/: debug_env.py  deploy_test_mode.py  diagnose_environment.py  enable_test_mode_azure.py  fix_azure_deployment.py  quick_test.py  setup_port_forward.py  verify_deployment.py
tests/: FINAL_CLEANUP_REPORT.md  TEST_CLEANUP_ANALYSIS.md  TEST_CLEANUP_COMPLETED.md  __init__.py  conftest.py  test_azure_endpoint.py  test_core_functionality.py  test_deployment.py  test_error_handling.py  test_function_app_unified.py  test_reply_token_manager.py  test_webhooks.py
tests/data/: sample_line_webhooks.json  sample_teams_webhooks.json
